feat: in-workspace release history and accurate local branch badge (v1.0.3)