@@ -9,6 +9,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseBody;
 import tools.jackson.databind.ObjectMapper;
 
 @Controller
@@ -17,15 +18,16 @@ public class ReleaseNotesController {
 
     public ReleaseNotesController(ObjectMapper json) throws IOException {
         try(var input=new ClassPathResource("releases/history.json").getInputStream()){
-            releases=featureReleases(Arrays.asList(json.readValue(input,Release[].class)));
+            releases=List.copyOf(Arrays.asList(json.readValue(input,Release[].class)));
         }
     }
 
     @GetMapping("/app/releases")
     String releases(@RequestParam(required=false) String version,Authentication authentication,Model model){
         PageController.addAccessModel(authentication,model);
-        model.addAttribute("releases",releases);
-        model.addAttribute("release",releases.stream().filter(item->item.version().equals(featureVersion(version)))
+        model.addAttribute("releases",releases.stream().limit(5).toList());
+        model.addAttribute("releaseHistory",releases);
+        model.addAttribute("release",releases.stream().filter(item->item.version().equals(version))
             .findFirst().orElse(releases.getFirst()));
         return "release-notes";
     }
@@ -33,17 +35,8 @@ public class ReleaseNotesController {
     public record Release(String version,String title,List<Section> sections){}
     public record Section(String title,List<String> items){}
 
-    static String featureVersion(String version){
-        if(version==null)return "";
-        return version.replaceFirst("^(\\d+\\.\\d+)\\.\\d+$","$1");
-    }
+    @GetMapping("/app/releases/history")
+    @ResponseBody
+    List<Release> history(){ return releases; }
 
-    static List<Release> featureReleases(List<Release> history){
-        var features=new java.util.LinkedHashMap<String,Release>();
-        for(var release:history){
-            String version=featureVersion(release.version());
-            features.putIfAbsent(version,new Release(version,release.title(),release.sections()));
-        }
-        return features.values().stream().limit(5).toList();
-    }
 }
